# AictionGuard

./: Makefile  README.md
.github/workflows/: ci.yml  publish-pypi.yml
cmd/agentguard/: main.go
docs/: CONTRIBUTING.md  SETUP.md
examples/: quickstart.py
pkg/audit/: logger.go
pkg/metrics/: metrics.go
pkg/notify/: notify.go
pkg/policy/: engine.go  watcher.go
pkg/proxy/: server.go
plugins/python/: README.md  pyproject.toml
plugins/python/agentguard/: __init__.py
plugins/python/agentguard/adapters/: __init__.py  browseruse.py  crewai.py  langchain.py  mcp.py
plugins/python/tests/: conftest.py  test_adapters.py  test_decorator.py  test_guard.py  test_integration.py
plugins/typescript/: package.json
scripts/: bump-version.sh
