[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentguardproxy"
version = "0.2.0"
description = "Python SDK for AgentGuard — the firewall for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "AgentGuard Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
keywords = ["ai", "agents", "firewall", "policy", "guardrails", "safety"]

[project.urls]
Homepage = "https://github.com/Caua-ferraz/AgentGuard"
Repository = "https://github.com/Caua-ferraz/AgentGuard"
Documentation = "https://github.com/Caua-ferraz/AgentGuard/blob/master/docs/SETUP.md"
Issues = "https://github.com/Caua-ferraz/AgentGuard/issues"

[project.optional-dependencies]
langchain = ["langchain>=0.1.0"]
crewai = ["crewai>=0.1.0"]
browser-use = ["browser-use>=0.1.0"]
mcp = []
all = ["langchain>=0.1.0", "crewai>=0.1.0", "browser-use>=0.1.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.setuptools.packages.find]
include = ["agentguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
